--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.meta.xr.sdk.all": "76.0.1",
+    "com.meta.xr.sdk.all": "77.0.0",
     "com.meta.xr.sdk.voice": "76.0.0",
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.collab-proxy": "2.8.2",
@@ -15,6 +15,7 @@
     "com.unity.visualscripting": "1.9.6",
     "com.unity.xr.hands": "1.5.1",
     "com.unity.xr.interaction.toolkit": "3.0.8",
+    "com.unity.xr.meta-openxr": "2.1.1",
     "com.unity.xr.openxr": "1.14.3",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
